[gd_scene load_steps=3 format=3 uid="uid://bw02pnmwjral5"]

[ext_resource type="Script" path="res://scenes/user_interface/user_interface/crops_manager/crops_manager.gd" id="1_ykg0h"]
[ext_resource type="Script" path="res://scenes/user_interface/user_interface/crops_manager/field_menus.gd" id="2_51o7i"]

[node name="CropsManager" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ykg0h")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(568, 0)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "Manage Farmers"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AssignWorkers" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_constants/separation = 16

[node name="Title" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/AssignWorkers"]
layout_mode = 2
size_flags_horizontal = 2
text = "Assign Workers"

[node name="FireButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/AssignWorkers"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "-"

[node name="AssignCount" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/AssignWorkers"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
text = "0
"

[node name="AssignButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/AssignWorkers"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "+"

[node name="FieldMenus" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16
script = ExtResource("2_51o7i")

[node name="Field1" type="OptionButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/FieldMenus"]
layout_mode = 2
focus_mode = 0
item_count = 1
popup/item_0/text = "Pumpkin"

[node name="Field2" type="OptionButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/FieldMenus"]
layout_mode = 2
focus_mode = 0
item_count = 1
popup/item_0/text = "Pumpkin"
